@@ -474,6 +474,33 @@ typedef struct {
 
 #define ISDRUMCHANNEL(c)  IS_SET_CHANNELMASK(drumchannels, c)
 
+/* opt_default_module */
+extern int opt_default_module;
+
+enum {
+	/* GS modules */
+	MODULE_GENERIC_GS = 0x0,
+	MODULE_SC55 = 0x1,
+	MODULE_SC88 = 0x2,
+	MODULE_SC88PRO = 0x3,
+	MODULE_SC8850 = 0x4,
+	/* XG modules */
+	MODULE_GENERIC_XG = 0x10,
+	MODULE_MU50 = 0x11,
+	MODULE_MU80 = 0x12,
+	MODULE_MU90 = 0x13,
+	MODULE_MU100 = 0x14,
+	/* GM modules */
+	MODULE_GENERIC_GM = 0x20,
+	MODULE_SBLIVE = 0x21,
+	MODULE_SBAUDIGY = 0x22,
+};
+
+inline int is_gs_module(void) {return (opt_default_module >= MODULE_GENERIC_GS
+									   && opt_default_module < MODULE_GENERIC_XG);}
+inline int is_xg_module(void) {return (opt_default_module >= MODULE_GENERIC_XG
+									   && opt_default_module < MODULE_GENERIC_GM);}
+
 extern Channel channel[];
 extern Voice *voice;
 
